join-section add

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -130,6 +130,27 @@
   .deals-cards {
     gap: 20px;
   }
+
+  /* join-section */
+
+  .join-section {
+    padding: 100px 0;
+    margin-bottom: 100px;
+  }
+  .join-section-title {
+    font-size: 20px;
+    line-height: 27px;
+    text-align: center;
+  }
+
+  .join-section-fields input {
+    width: 218px;
+    padding: 15px 10px;
+  }
+  .join-section-fields .btn-primary {
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
 
 /* 2. Small devices (landscape phones, 576px and up) */
