--- a/css/style.css
+++ b/css/style.css
@@ -344,3 +344,52 @@ li a {
   font-weight: 500;
   line-height: 150%;
 }
+
+/* join-section */
+
+.join-section {
+  background: url("../images/news-letter-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  padding: 200px 0;
+  margin-bottom: 200px;
+  position: relative;
+  z-index: 1;
+}
+
+.join-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(7, 51, 79, 0.4);
+  z-index: -1;
+}
+
+.join-section-title {
+  font-family: "Noto Serif", serif;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 27px;
+  color: #ffffff;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.join-section-fields {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.join-section-fields input {
+  border: none;
+  padding: 15px 20px;
+  display: inline-block;
+  width: 644px;
+  max-width: 100%;
+  height: 50px;
+}
