--- a/css/responsive.css
+++ b/css/responsive.css
@@ -151,6 +151,17 @@
     font-size: 16px;
     line-height: 19px;
   }
+
+  /* footer */
+  footer .footer-main {
+    grid-template-columns: repeat(1, 1fr);
+    justify-items: baseline;
+    margin-left: 20px;
+  }
+
+  .footer-description {
+    margin-bottom: 40px;
+  }
 }
 
 /* 2. Small devices (landscape phones, 576px and up) */
