--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ li a {
   background-size: cover;
   width: 100%;
   padding: 200px 0;
-  margin-bottom: 200px;
+  margin-bottom: 50px;
   position: relative;
   z-index: 1;
 }
@@ -392,4 +392,30 @@ li a {
   width: 644px;
   max-width: 100%;
   height: 50px;
+}
+
+/* footer */
+footer {
+  margin-bottom: 50px;
+}
+footer .footer-main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+}
+
+footer .footer-main ul li {
+  list-style: none;
+  margin-bottom: 30px;
+}
+
+footer .footer-socials ul {
+  align-items: center;
+  gap: 24px;
+}
+
+.footer-description {
+  max-width: 359px;
+  margin: 0 auto;
+  margin-top: 13px;
 }
